modified grid. ,cutoff bottom screen fixed.

--- a/style.css
+++ b/style.css
@@ -11,18 +11,18 @@ body {
 .wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-  grid-gap: 3px;
+  grid-template-rows: repeat(12, 1fr);
+  grid-gap: 0px;
   position: relative;
   max-width: 100vw;
-  max-height: 95vh;    
+  max-height: 99vh;    
   margin: 2px auto;
   background-color: darkslateblue;
   color: rgb(249, 247, 247);
 }
 .title {
   grid-column: 1 / 4;
-  grid-row: 1;
+  grid-row: 1 / 2;
   display: flex;
   background-color: #222;
   justify-content:space-evenly;
@@ -32,35 +32,52 @@ body {
 .gui-container {
   position: relative;
   grid-column: 4 / 5;
-  grid-row: 1;
-  width: 98%;
+  grid-row: 1 / 3;
+  /* width: 98%; */
   background-color: #222;
   border: 1px solid white;
+  font-size: 12px;
   display: flex;
+  flex-direction: column;
   align-items:flex-start;
   justify-content: flex-end;
 }
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  border: 2px solid #ddd;
+  display: inline-block;
+  padding: 3px 6px;
+  margin: 0 auto;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #111;
+  background-color:#b5f4bd; 
+}
 
-h1 {
+h3 {
   text-align: center;
   color: rgb(249, 247, 247);
 }
 #small {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .main-container {
   position: relative;
   grid-column: 1 / 4;
-  grid-row: 2 / 7;  
+  grid-row: 2 / 11;  
+  min-width: 480px;
+  max-width: 1080px;
   background-color: #222;     
   border: 2px solid rgb(254, 253, 253); 
-  margin:  2px 4px;
+  /* margin:  2px 4px; */
 }
 
 #canvas1 {     
   /* position: absolute; */
- /*  background-image: url('./assets/textures/space-background.jpg');
+  /* background-image: url('./assets/textures/space-background.jpg');
   background-size: cover; */
   top: 0;
   left: 0;
@@ -68,64 +85,81 @@ h1 {
 }
 
 .control-container {  
-  grid-column: 4;
-  grid-row: 2 / 4;
-  width: 98%;
-  background-color: #222;
+  grid-column: 4 / 5;
+  grid-row: 3 / 6;
+  /* width: 98%; */
+  /* background-color: darkslateblue; */
   border: 1px solid white;
   color: white;
-  margin: 2px;  
-  padding: 6px; 
+  /* margin: 2px;   */
+  padding: 3px; 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-.bg_btn {
+.bg_btn, .select-btn {
+  font-size: 10px;
   margin: 1px;
+  padding: 3px;
   width: 23%;
   height: 30%;
-  color: #fff;
+  color: white;
   background-color: #222;
   border: 1px solid #aaa;
   border-radius: 5px;
   cursor: pointer;
+  transition: all .4s;
 }
-.bg_btn:focus {
-  border: 2px solid #fff;
+.bg_btn:hover, .select-btn:hover {
+  border: 1.6px solid #fff;
+  font-size: 11px;
+  color: #fff;
   transform: scale(1.05);
+}
+.bg_btn:focus, .select-btn:focus {
+  border: 1px solid #222;
+  color: #222;
+  background-color: #eee;
+  transform: scale(1.04);
 }
 
 .waveform-container {
   position: relative;
-  grid-column: 4;
-  grid-row: 4 / 6;
-  width: 98%;
-  background-color: #222;
+  grid-column: 4 / 5;
+  grid-row: 6 / 10;
+  /* width: 98%; */
+  background-color: darkslateblue;
   border: 1px solid white;
   color: white;
-  margin: 2px;  
-  padding: 4px;  
+  /* margin: 2px;   */
+  padding: 3px;  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-between;
+  align-items:center;
 }
 .select-btn {
+  font-size: 10px;
   margin: 1px;
+  padding: 3px;
   width: 23%;
-  height: 30%;
+  height: 22.50%;
   color: white;
   background-color: #222;
   border: 1px solid #aaa;
   border-radius: 5px;
   cursor: pointer;
-}
-.select-btn:focus{
-  border: 2px solid #fff;
-  transform: scale(1.05);
+  transition: all .4s;
 }
 
 .music-container {
   position: relative;
-  grid-column: 4;
-  grid-row: 6 / 8;   
-  margin-right: 1%;
-  padding: 5px;
-  width: 98%;   
-  font-size: 14px;
+  grid-column: 4 / 5;
+  grid-row: 10 / 12;   
+  /* margin-right: 1%; */
+  padding: 3px;
+  /* width: 98%;    */
+  font-size: 12px;
   /* background-color: #222;
   border: 1px solid rgb(254, 253, 253);  */
   display: flex;
@@ -133,31 +167,32 @@ h1 {
   justify-content:space-between;
   align-items:center;
 } 
+
 #logo {
-  width: 65px;
-  height: 60px;   
+  width: 45px;
+  height: 40px;   
   float:left;
-  padding: 5px;
+  padding: 3px;
 }
 #wolf {
   width: 25px;
   height: 26px;   
   float:left;
-  padding: 4px;
+  padding: 3px;
 }
 #file_upload, #imageFile_upload {
-  margin: 6px;
+  margin: 3px;
 }
 
 .btn {
   margin: 5px;
-  width: 40px;
-  font-size: 20px;
+  width: 50px;
+  font-size: 16px;
   cursor: pointer;
 }
-.btn:focus {
+.btn:focus{
+  transform: scale(1.05);
   border: 2px solid #fff;
-  transform: scale(1.1);
 }
 .control-buttons {
   border: 1px solid black;
@@ -166,10 +201,11 @@ h1 {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  
 }
 .record-buttons {
   position: relative;
-  margin-top: 6px;
+  margin-top: 3px;
   border: 1px solid black;
   border-radius: 10px;
   display: flex;
@@ -177,25 +213,30 @@ h1 {
   justify-content: center;
   justify-content: space-between;
   align-items: center;
+ 
 }
 .record-btn {
-  width: 65px;
-  height: 65px;
-  background-color: #aaa;
+  width: 70px;
+  height: 40px;
+  /* background-color: #aaa; */
   margin: 1px;
   padding: 1px;
-  border-radius: 50%;
+  border-radius: 45%; 
   cursor: pointer;
 }
 #recordBtn {
-  background-color:antiquewhite;
-  border: 5px solid red;
+  background-color:radial-gradient(#f49856, #080502f2);
+  border: 4px solid rgb(251, 84, 6);
   margin-right: 10px;
 }
 #stopRecordBtn {
-  background-color:antiquewhite;
-  border: 5px solid black;
+  background-color:radial-gradient(#453fb7, #3723ec);
+  border: 4px solid rgb(62, 7, 245);
   margin-left: 10px;
+}
+.record-btn:focus{
+  border: 2px solid #fff;
+  transform: scale(1.1);
 }
 .company-logo {
   width: 100%;
@@ -207,33 +248,43 @@ h1 {
 
 #gui {
   position: absolute;
-  right: 4%;
-  top: 15px;  
+  right: 0;
+  top: 3px;  
   margin-right: 0;
-  border-left: 2px solid white;
+  display: none;
 }
 
 .footer {
   position: relative;
   grid-column: 1 / 4;
-  grid-row: 7;
-  width: 98%;
-  background-color: #222;
+  grid-row: 11/13;
+  /* width: 98%; */
+  background-color: #111;
   border: 1px solid white;
-  margin: 0 2px;
+  /* margin: 0 2px; */
   padding: 6px;  
 }
 #canvas2 {
-  position: absolute;
+   width: 100%;
+  /* position: absolute; 
   top: 0;
   left: 0;
   background-color: #111;
   max-width: 840px;
-  width: 100%;
-  max-height: 80px;
+ 
   border: 1px solid white;
+  max-height: 80px;*/
 }
-
+.company-logo{
+  grid-column: 4 / 5;
+  grid-row: 12 / 13;
+  /* width: 98%; */
+  font-size: 11px;
+  background-color: #222;
+  border: 1px solid white;
+  /* margin: 0 2px; */
+  padding: 6px;  
+}
 
 .modal {
   display: none;
@@ -298,8 +349,10 @@ h1 {
 
 #modal_btn {
   position: absolute;
-  top: 10%;
-  left: 1%;
+  top: 6%;
+  left: 0%;
+  padding: 3px;
+  border-radius: 0 10px 10px 0;
 }
 
 .main{
